# george-project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  build.sh  configure.sh  main.cpp  reset.sh
src/: prefrontal_cortex.cpp
src/classes/interpreter/: interpreter.cpp
src/modules/thalamus/: thalamus.cpp
src/modules/thalamus/modules/motor_cortex/: motor_cortex.cpp
src/modules/thalamus/modules/occipital_lobe/: occipital_lobe.cpp
src/modules/thalamus/modules/temporal_lobe/: temporal_lobe.cpp
